feat: add endpoints for current user course progress
